tree-sitter-spacetime/test/corpus/selectors.txt
==================
Single selector nested scope
==================
.parent {
  .child {
    color: red;
  }
}
---

(source_file
  (scope_block
    (selector_list (selector))
    (block
      (nested_scope
        (selector_list (selector))
        (block
          (property_decl (property_name) (identifier)))))))

==================
Descendant selector nested scope
==================
.parent {
  .foo .bar {
    color: red;
  }
}
---

(source_file
  (scope_block
    (selector_list (selector))
    (block
      (nested_scope
        (selector_list (selector) (selector))
        (block
          (property_decl (property_name) (identifier)))))))

==================
Three-level descendant selector
==================
.parent {
  .a .b .c {
    color: red;
  }
}
---

(source_file
  (scope_block
    (selector_list (selector))
    (block
      (nested_scope
        (selector_list (selector) (selector) (selector))
        (block
          (property_decl (property_name) (identifier)))))))

==================
Descendant selector at top level
==================
.parent .child {
  color: red;
}
---

(source_file
  (scope_block
    (selector_list (selector) (selector))
    (block
      (property_decl (property_name) (identifier)))))

==================
Comma plus descendant combo
==================
.a .b, .c .d {
  color: red;
}
---

(source_file
  (scope_block
    (selector_list (selector) (selector) (selector) (selector))
    (block
      (property_decl (property_name) (identifier)))))

==================
Nested descendant inside directive block
==================
@scroll name(elem) {
  .foo .bar {
    opacity: 0;
  }
}
---

(source_file
  (directive
    (identifier)
    (identifier)
    (block
      (nested_scope
        (selector_list (selector) (selector))
        (block
          (property_decl (property_name) (number)))))))
